Search algorithm improved and file now can be read from internet